# ketal

./: AGENTS.md  Cargo.toml  openrpc.json
.github/workflows/: release.yml
src/: business.rs  database.rs  infrastructure.rs  lib.rs  main.rs
src/business/: entity_builder.rs  error.rs  services.rs  usecases.rs
src/business/entities/: user.rs
src/business/entities/user/: user_builder.rs  user_gateway.rs  user_presenter.rs  user_test.rs
src/business/entities/user/user_gateway/: in_memory_user_gateway.rs  sqlx_user_gateway.rs
src/business/error/: gateway_error.rs  password_encoder_error.rs  user_already_exists_error.rs
src/business/services/: password_encoder.rs
src/business/usecases/: register.rs
src/business/usecases/outputs/: user.rs
src/business/usecases/outputs/user/: user_detailed_output.rs  user_list_item_output.rs
src/business/usecases/register/: default_register.rs  register_input.rs
src/infrastructure/: reactions.rs  services.rs
src/infrastructure/communication/: email.rs
src/infrastructure/communication/email/: register_mail.rs  sender.rs
src/infrastructure/communication/email/sender/: ses_sender.rs
src/infrastructure/reactions/: send_welcome_email.rs
src/infrastructure/reactions/send_welcome_email/: default_send_welcome_email.rs
src/infrastructure/services/: argon2_password_encoder.rs
