[package]
name = "ketal"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
dotenvy = "0.15"
jsonrpc-usecase = { git = "https://github.com/pierrerolland/jsonrpc-usecase", features = ["axum"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1", features = ["v4"] }
